fix: don't show scrollbar's corner box in popup, when it has horizontal and vertical simultaneously

--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -17,6 +17,9 @@
       border: 1px solid;
       border-radius: $scrollSize / 2;
     }
+    &::-webkit-scrollbar-corner {
+      background: none;
+    }
   }
 
   .play-icon {
