--- a/src/components/ui/mixins.scss
+++ b/src/components/ui/mixins.scss
@@ -21,6 +21,6 @@
     border-radius: $scrollBarSize;
   }
   &::-webkit-scrollbar-corner {
-    background-color: transparent;
+    background: none;
   }
 }
